--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eg1",
   "version": "0.1.0",
-  "homepage": "https://annathesloth284.github.io/spaceapps23_1",
+  "homepage":"https://m-e-l-i.github.io/react-gh-pages",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
